discussion/kv_engine/155442/155442_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add gsl to precompiled header

Before:

Analyzing build trace from 'alltargets.bin'...
**** Time summary:
Compilation (1076 times):
  Parsing (frontend):         2709.9 s
  Codegen & opts (backend):    780.9 s

After:

Analyzing build trace from 'gsl.bin'...
**** Time summary:
Compilation (1076 times):
  Parsing (frontend):         2598.4 s
  Codegen & opts (backend):    768.5 s

Change-Id: I1f4e4ffd2402103872bb09336a46f29286a8b3ec

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-11 10:58:55.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 11:51:22.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36747/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36747/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31410/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11355/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10431/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 12:29:39.000000000
Message: 
Patch Set 5:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9780/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31410/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11355/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10431/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36751/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 12:30:09.000000000
Message: 
Patch Set 5: Verified+1

overriding clang-tidy which doesn't deal with changes to precompiled-headers.h
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 12:30:12.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 12:34:04.000000000
Message: 
Patch Set 5: Code-Review+2

(1 comment)
Line:22, /COMMIT_MSG -> minus 100s - boom!

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 12:38:08.000000000
MISMATCHED INLINE COMMENT
Line:22, /COMMIT_MSG -> check again :) forgot to update the numbers
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 13:04:22.000000000
MISMATCHED INLINE COMMENT
Line:22, /COMMIT_MSG -> :sweetmotherofgod:
----------------------------------------------------------------------------------------------------------------------
